[package]
name = "yuyu"
version = "0.1.0"
authors = ["Luca <ionix@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4", features = [ "tls" ] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sqlite = "*"
rand = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]